test/invalid/baseline/tostring-escaped.txt
Syntax error at line 2:
  DOMString _toString
            ^ _toString is a reserved identifier and must not be used.
